<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/user"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/circleImageView"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/circleImageView"
            card_view:layout_constraintTop_toTopOf="@+id/circleImageView"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/company"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintBottom_toBottomOf="@+id/circleImageView"
            card_view:layout_constraintEnd_toEndOf="@+id/name"
            card_view:layout_constraintStart_toStartOf="@+id/name"
            card_view:layout_constraintTop_toBottomOf="@+id/name"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/company" />

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintBottom_toBottomOf="@+id/circleImageView"
            card_view:layout_constraintEnd_toEndOf="@+id/company"
            card_view:layout_constraintStart_toStartOf="@+id/company"
            card_view:layout_constraintTop_toBottomOf="@+id/company"
            card_view:layout_constraintTop_toTopOf="@+id/company"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/username" />

    </androidx.constraintlayout.widget.ConstraintLayout>
